tests/paczka1/small_fuzzy/46369957.err
Error in line 1: RvgEm S346 73,24
Error in line 6: nPVjgqK S152 39,7
Error in line 10: Req8p S152 18,3
